syntax = "proto3";

option csharp_namespace = "TickerViewer.Grpc.Shared.Protos";

import "google/protobuf/timestamp.proto";

service TicketProtoService {
    rpc GetActualTicketOffer (ActualTicketRequest) returns (ActualTicketResponse);
}

message ActualTicketRequest {
}

message ActualTicketResponse {
    repeated Ticket actual_tickets = 1;
}

message Ticket {
    int32 ticket_id = 1;
    repeated Odd actual_odds = 2;
}

message Odd {
    double odds_rate = 1;
    string status = 2;
    OddBetStatusProps odd_bet_status_props = 3;
}

message OddBetStatusProps {
    google.protobuf.Timestamp event_date = 1;
    string live_betting = 2;
    bool is_live_bet_active = 3;
    bool is_bet_active = 4;
}
